fixed send button shifts from right issue added tests updated snapshots

--- a/src/styles/components/chat/_chat-prompt-wrapper.scss
+++ b/src/styles/components/chat/_chat-prompt-wrapper.scss
@@ -7,10 +7,10 @@
         flex-flow: column nowrap;
         overflow: hidden;
         box-sizing: border-box;
+        border: var(--mynah-border-width) solid var(--mynah-color-border-default);
         background-color: var(--mynah-card-bg);
         border-radius: var(--mynah-card-radius);
-        padding: calc(calc(var(--mynah-sizing-4) + var(--mynah-border-width));
-        position: relative + var(--mynah-border-width));
+        padding: var(--mynah-sizing-4);
         position: relative;
 
         > .mynah-chat-prompt-input-wrapper {
@@ -55,6 +55,7 @@
                 width: 100%;
                 position: relative;
                 align-self: center;
+                overflow: hidden;
 
                 > .mynah-chat-prompt-input {
                     font-family: var(--mynah-font-family);
@@ -227,39 +228,6 @@
                     }
                 }
             }
-        }
-
-        > .mynah-prompt-input-progress-field {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            box-sizing: border-box;
-            z-index: 1000;
-            display: flex;
-            min-width: 100%;
-            overflow: hidden;
-            justify-content: stretch;
-            align-items: stretch;
-            background-color: var(--mynah-card-bg);
-            > .mynah-progress-indicator-wrapper {
-                width: 100%;
-            }
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            max-height: 100%;
-            box-sizing: content-box;
-            border-radius: inherit;
-            border: var(--mynah-border-width) solid var(--mynah-color-border-default);
-            box-sizing: border-box;
         }
 
         > .mynah-prompt-input-progress-field {
